# Skeleton

./: .gitignore  .isort.cfg  .pre-commit-config.yaml  pyproject.toml  readme.md
skeleton/apps/: basic_app.py
